themes: Fix TagItemWidget's vertical alignment in Safari
Also introduce two variables to Apex similar to WikimediaUI theme.

Bug: T217213

--- a/src/themes/apex/common.less
+++ b/src/themes/apex/common.less
@@ -41,6 +41,9 @@
 @size-icon-tagitem-close: unit( 14 / 16 / 0.8, em );
 @size-indicator: unit( 12 / 16 / 0.8, em );
 @size-dialog-message-bar: unit( 32 / 16 / 0.8, em );
+@size-modifier-border: unit( 1 / 16 / 0.8, em ); // Use for size calculations with borders aside of `px` based `@border-width-base`
+
+@height-tagitem: unit( 22 / 16 / 0.8, em );
 
 @start-frameless: -@padding-horizontal-frameless;
 
