--- a/src/themes/wikimediaui/widgets.less
+++ b/src/themes/wikimediaui/widgets.less
@@ -1464,7 +1464,7 @@
 	border: @border-base;
 	border-radius: @height-tagitem;
 	padding: 0 @padding-horizontal-tagitem;
-	line-height: @height-tagitem;
+	line-height: @height-tagitem - 2 * @size-modifier-border;
 	vertical-align: middle;
 
 	&.oo-ui-labelElement .oo-ui-labelElement-label {
